    * Soft error was ignored in socket client collection also when socket
      surely was closed, like when 0 bytes were read. This caused the socket
      not to be closed with following CPU spin due do constant POLLIN event.
      The soft error is now forced to propagate if bytes read is zero so that
      only data errors are ignored (which is also intention of higher levels).

  * Under the hood:
    * Use events in file module
    * Common send loop for file and ip modules

 -- Atle Solbakken <atle@goliathdns.no>  Wed, 15 Nov 2023 10:15:49 +0100

rrr (1.27-1) bullseye; urgency=medium

  * Features:
    * New module to run JavaScript programs
    * New parameter in ip module to generate empty messages when new
      TCP connections are accepted.
    * New parameter in httpclient to disable HTTP/2 upgrade headers

  * Improvements:
    * Clarified inconsitency of manual with respect to configuration
      paramter mqtt_publish_rrr_message
    * Never send raw array data from mqttclient
    * Remove stale configuration cmodule parameters sleep_time_ms and
      nothing_happend_limit which had no effect when used.

  * Fixes:
    * Handling of websocket topic filters in httpserver
    * Crash in httpclient when content-encoding: gzip was set from server with
      zero length body
    * Build with new major release of OpenSSL
    * Build with Python 3.11

 -- Atle Solbakken <atle@goliathdns.no>  Fri, 10 Feb 2023 08:59:28 +0100

rrr (1.25-2) bullseye; urgency=medium

  * Under the hood:
    * Fix misc. code quality issues

 -- Atle Solbakken <atle@goliathdns.no>  Sun, 26 Jun 2022 12:05:57 +0200

rrr (1.25-1) bullseye; urgency=medium

  * Changes:
    * Argument '-f|--force', force read of unsupported array message version,
      is removed from rrr_msg utility.

  * Features:
    * Add configurable delay between forks during startup
    * New rrr_sub binary which can read RRR messages in the payload of MQTT
      messages.