@@ -16,9 +16,6 @@ bless $debug, rrr::rrr_helper::rrr_debug;
 sub config {
 	my $settings = shift;
 
-	print "Custom argument is '" . $settings->get("custom_argument") . "'\n";
-	$settings->set("produce_warning_now", "abc");
-
 	return 1;
 }
 
@@ -26,23 +23,7 @@ sub get_from_tag {
 	my $message = shift;
 	my $tag = shift;
 
-	for (my $i = 0; $i < @{$message->{'array_tags'}}; $i++) {
-		if (@{$message->{'array_tags'}}[$i] eq $tag) {
-			return @{$message->{'array_values'}}[$i];
-		}
-	}
-
-	return undef;
-}
-
-sub push_str {
-	my $message = shift;
-	my $tag = shift;
-	my $value = shift;
-
-	push @{$message->{'array_values'}}, "$value";
-	push @{$message->{'array_tags'}}, $tag;
-	push @{$message->{'array_types'}}, "str";
+	return ($message->get_tag_all($tag))[0];
 }
 
 sub push_blob {
@@ -50,48 +31,22 @@ sub push_blob {
 	my $tag = shift;
 	my $value = shift;
 
-	push @{$message->{'array_values'}}, "$value";
-	push @{$message->{'array_tags'}}, $tag;
-	push @{$message->{'array_types'}}, "blob";
-}
-
-sub push_host {
-	my $message = shift;
-	my $tag = shift;
-	my $value = shift;
-
-	push @{$message->{'array_values'}}, "$value";
-	push @{$message->{'array_tags'}}, $tag;
-	push @{$message->{'array_types'}}, "h";
+	$message->push_tag_blob($tag, $value, length $value);
 }
 
 sub process {
 	my $message = shift;
 
-	my $code = get_from_tag($message, "code");
-	if (!defined($code)) {
-		push_host($message, "code", $message->{'timestamp'});
-#		printf "perl5: Could not find tag 'code' in message\n";
-#		return 1;
-	}
+	my($ip, $port) = $message->ip_get();
+
+	return 1 unless defined $ip;
+
+	printf("ip: $ip, port: $port\n");
+
+	$message->clear_array();
 
 	push_blob($message, "reply", "A\r");
-
-	$message->{'ip_addr'} = sockaddr_in (7777, inet_aton("127.0.0.1"));
-	$message->{'ip_addr_len'} = bytes::length($message->{'ip_addr'});
-	$message->{'ip_so_type'} = "tcp";
-
 	$message->send();
-
-	$message->{'ip_addr'} = sockaddr_in (7777, inet_aton("127.0.0.1"));
-	$message->{'ip_addr_len'} = bytes::length($message->{'ip_addr'});
-	$message->{'ip_so_type'} = "udp";
-
-	$message->send();
-
-	foreach my $key (sort keys(%{$message})) {
-		$debug->dbg(1, "Key: $key: " . $message->{$key} . "\n");
-	}
 
 	return 1;
 }
