@@ -62,6 +62,8 @@ rrr (1.28-29) bullseye; urgency=medium
       not to be closed with following CPU spin due do constant POLLIN event.
       The soft error is now forced to propagate if bytes read is zero so that
       only data errors are ignored (which is also intention of higher levels).
+    * Connections were closed in IP module when byte by byte sync was used
+      and the alignment used up all remaining buffered bytes.
 
   * Under the hood:
     * Use events in file module
